--- a/Ant_ai.ipynb
+++ b/Ant_ai.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNCI8Dqg1niDB3C6R8OqepG",
+      "authorship_tag": "ABX9TyPqpmvW20PYvi2jcrNw5WeC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +31,26 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#**New Indian Style Recipe Generator**\n",
+        "\n",
+        "###This notebook contains a mini **Transformer-Based Language Model** designed to generate new and authentic *Indian-style recipes*.As am really interested in *Generative llm's* using *transformer-architecture*, and that is my motivation to make this project. Large Language Models have a broad range of applications, with a core functionality of generating new content from trained data. I have leveraged this capability to train the model to identify Indian dishes *styles and flavors* , and generate new indian style recipes.\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "21HxiD2448bF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#**Data Preparation**\n",
-        "##*Scrapping data and preprocessing*"
+        "##*Scrapping data and preprocessing*\n"
       ],
       "metadata": {
         "id": "wHh9_TfE-krW"
@@ -40,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "o7311dxl8cQq"
       },
@@ -60,7 +78,7 @@
       "metadata": {
         "id": "MJydC7g3--re"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +89,7 @@
       "metadata": {
         "id": "hkH93zrd_HBQ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,24 +120,32 @@
       "metadata": {
         "id": "AZCgaPTf_Ldc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "#**Let's build a GPT model**\n",
-        "GPT-generative pretrained transformer.\n",
-        "```\n",
+        "###GPT-generative pretrained transformer.\n",
+        "----\n",
         "\n",
-        "It is an **Autoregressive** ,*Unidirectional ,Transformer Encoder* architecture.\n",
-        "\n",
-        "##**Aim**\n",
-        "To build a model that generate recipes that mimic the style and flavors typical of Indian cuisine\n",
-        "basically to predict the next text in the sequence by context provided by the preceding words."
+        "###It is an **Autoregressive** ,*Unidirectional ,Transformer Encoder* architecture.\n",
+        "###To predict the next text in the sequence by context provided by the preceding words."
       ],
       "metadata": {
         "id": "mhqq_D7FI2W8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###**Vocabulary Size of this model**\n",
+        "\n",
+        "#####Which says this model generates character from this vocabulary only\n"
+      ],
+      "metadata": {
+        "id": "439SX3UrAZZP"
       }
     },
     {
@@ -139,7 +165,7 @@
         "id": "iwsiHTRuIjEN",
         "outputId": "1092bad0-991d-4a8d-94e1-3c686cce30fe"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +181,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tokeizing - converting text to numericals.since machines uderstand only that."
+        "**bold text**###**Function to Tokenize each Character**\n",
+        "#####Converting text to numericals,since machines understand only that.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "injKXxMfPUnR"
@@ -177,13 +211,15 @@
       "metadata": {
         "id": "4H4aTVY4Nfkf"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "###Encoding the data.since a character token level model is build this a character level ecoding is done."
+        "###**Importing *Torch module* and converting the *encoded data to a Tensor***\n",
+        "##### Use the above defined function.\n",
+        "#####Since a character token level model is built character level encoding is done."
       ],
       "metadata": {
         "id": "8nWXCGdHBRcl"
@@ -200,74 +236,23 @@
       "metadata": {
         "id": "evInBtHjPAew",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 193
         },
         "collapsed": true,
-        "outputId": "a8f6d24e-68b5-40a9-df3c-d157f170a82d"
+        "outputId": "a5c20f89-a597-4ca4-e97c-e6c7177465f3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([259911]) torch.int64\n",
-            "tensor([ 0,  0, 23, 60, 54, 57, 50, 49,  1, 39, 54, 48, 50,  0,  0,  0, 44, 46,\n",
-            "        64, 53,  1, 53, 46, 57, 51,  1, 46,  1, 61, 60, 66, 59, 49,  1, 60, 63,\n",
-            "         1, 46,  1, 48, 60, 60, 59, 56, 50, 50, 51, 66, 57,  1, 60, 51,  1, 63,\n",
-            "        54, 48, 50,  7,  1, 46, 59, 49,  1, 61, 66, 65,  1, 54, 65,  1, 65, 60,\n",
-            "         1, 47, 60, 54, 57,  1, 54, 59,  0, 46,  1, 57, 46, 63, 52, 50,  1, 62,\n",
-            "        66, 46, 59, 65, 54, 65, 70,  1, 60, 51,  1, 68, 46, 65, 50, 63,  7,  1,\n",
-            "        60, 67, 50, 63,  1, 46,  1, 47, 63, 54, 64, 56,  1, 51, 54, 63, 50,  9,\n",
-            "         1, 30, 58, 58, 50, 49, 54, 46, 65, 50, 57, 70,  1, 65, 53, 50,  1, 63,\n",
-            "        54, 48, 50,  0, 47, 50, 52, 54, 59, 64,  1, 65, 60,  1, 47, 60, 54, 57,\n",
-            "         7,  1, 65, 53, 50,  1, 68, 46, 65, 50, 63,  1, 68, 54, 57, 57,  1, 47,\n",
-            "        66, 47, 47, 57, 50,  1, 66, 61,  1, 65, 60,  1, 65, 53, 50,  1, 64, 66,\n",
-            "        63, 51, 46, 48, 50,  1, 60, 51,  1, 65, 53, 50,  1, 61, 60, 65,  0, 46,\n",
-            "        59, 49,  1, 60, 67, 50, 63, 51, 57, 60, 68,  7,  1, 48, 46, 63, 63, 70,\n",
-            "        54, 59, 52,  1, 46, 68, 46, 70,  1, 62, 66, 46, 59, 65, 54, 65, 54, 50,\n",
-            "        64,  1, 60, 51,  1, 64, 48, 66, 58,  1, 46, 59, 49,  1, 54, 58, 61, 66,\n",
-            "        63, 54, 65, 54, 50, 64,  9,  1, 41, 53, 50,  0, 48, 60, 67, 50, 63,  1,\n",
-            "        60, 51,  1, 65, 53, 50,  1, 61, 60, 65,  1, 64, 53, 60, 66, 57, 49,  1,\n",
-            "        59, 60, 68,  1, 47, 50,  1, 56, 50, 61, 65,  1, 61, 46, 63, 65, 54, 46,\n",
-            "        57, 57, 70,  1, 60, 61, 50, 59,  7,  1, 46, 59, 49,  1, 65, 53, 50,  1,\n",
-            "        63, 54, 48, 50,  0, 64, 65, 54, 63, 63, 50, 49,  1, 65, 60,  1, 61, 63,\n",
-            "        50, 67, 50, 59, 65,  1, 46, 59,  1, 50, 59, 65, 54, 63, 50,  1, 60, 67,\n",
-            "        50, 63, 51, 57, 60, 68,  1, 60, 51,  1, 65, 53, 50,  1, 68, 46, 65, 50,\n",
-            "        63,  9,  1, 36, 59,  1, 65, 53, 50,  0, 64, 66, 47, 64, 54, 49, 54, 59,\n",
-            "        52,  1, 60, 51,  1, 65, 53, 50,  1, 68, 46, 65, 50, 63,  1, 60, 63,  1,\n",
-            "        65, 53, 50,  1, 47, 66, 47, 47, 57, 54, 59, 52,  7,  1, 65, 53, 50,  1,\n",
-            "        51, 54, 63, 50,  1, 64, 53, 60, 66, 57, 49,  1, 47, 50,  1, 63, 50, 49,\n",
-            "        66, 48, 50, 49,  7,  0, 66, 59, 65, 54, 57,  1, 54, 65,  1, 54, 64,  1,\n",
-            "        64, 46, 65, 54, 64, 51, 46, 48, 65, 60, 63, 54, 57, 70,  1, 46, 64, 48,\n",
-            "        50, 63, 65, 46, 54, 59, 50, 49,  1, 65, 53, 46, 65,  1, 65, 53, 50,  1,\n",
-            "        52, 63, 46, 54, 59, 64,  1, 60, 51,  1, 63, 54, 48, 50,  7,  0, 68, 54,\n",
-            "        65, 53, 60, 66, 65,  1, 47, 50, 54, 59, 52,  1, 61, 46, 61, 61, 70,  7,\n",
-            "         1, 46, 63, 50,  1, 62, 66, 54, 65, 50,  1, 64, 60, 51, 65,  7,  1, 68,\n",
-            "        53, 50, 59,  1, 65, 53, 50,  1, 61, 60, 65,  1, 64, 53, 60, 66, 57, 49,\n",
-            "         1, 47, 50,  1, 63, 50, 58, 60, 67, 50, 49,  0, 51, 63, 60, 58,  1, 65,\n",
-            "        53, 50,  1, 51, 54, 63, 50,  1, 46, 59, 49,  1, 46,  1, 62, 66, 46, 63,\n",
-            "        65,  1, 60, 51,  1, 48, 60, 57, 49,  1, 68, 46, 65, 50, 63,  1, 47, 50,\n",
-            "         1, 46, 49, 49, 50, 49,  9,  1, 22, 57, 57,  1, 65, 53, 50,  1, 57, 54,\n",
-            "        62, 66, 54, 49,  7,  0, 68, 53, 54, 48, 53,  1, 54, 64,  1,  2, 48, 60,\n",
-            "        59, 55, 50, 50,  7,  2,  1, 64, 53, 60, 66, 57, 49,  1, 65, 53, 50, 59,\n",
-            "         1, 47, 50,  1, 49, 63, 46, 54, 59, 50, 49,  7,  1, 46, 59, 49,  1, 65,\n",
-            "        53, 50,  1, 61, 60, 65,  1, 63, 50, 61, 57, 46, 48, 50, 49,  0, 60, 67,\n",
-            "        50, 63,  1, 46,  1, 52, 50, 59, 65, 57, 50,  1, 48, 53, 46, 63, 48, 60,\n",
-            "        46, 57,  1, 53, 50, 46, 65,  7,  1, 65, 60,  1, 46, 57, 57, 60, 68,  1,\n",
-            "        46, 57, 57,  1, 58, 60, 54, 64, 65, 66, 63, 50,  1, 65, 60,  1, 50, 67,\n",
-            "        46, 61, 60, 63, 46, 65, 50,  7,  0, 46, 64, 64, 54, 64, 65, 54, 59, 52,\n",
-            "         1, 65, 53, 50,  1, 61, 63, 60, 48, 50, 64, 64,  1, 47, 70,  1, 60, 48,\n",
-            "        48, 46, 64, 54, 60, 59, 46, 57, 57, 70,  1, 64, 53, 46, 56, 54, 59, 52,\n",
-            "         1, 65, 53, 50,  1, 61, 60, 65,  7,  1, 60, 63,  1, 64, 65, 54, 63, 63,\n",
-            "        54, 59, 52,  0, 54, 65, 64,  1, 48, 60, 59, 65, 50, 59, 65, 64,  1, 52,\n",
-            "        50, 59, 65, 57, 70,  1, 68, 54, 65, 53,  1, 46,  1, 68, 60, 60, 49, 50,\n",
-            "        59,  1, 64, 61, 60, 60, 59,  9,  1, 41, 54, 58, 50,  1, 65, 60,  1, 47,\n",
-            "        60, 54, 57, 20,  1, 53, 46, 57, 51,  1, 46, 59,  0, 53, 60, 66, 63,  9,\n",
-            "         0,  0, 41, 53, 50,  1, 48, 60, 60, 59, 56, 50, 50,  1, 60, 51,  1, 63,\n",
-            "        54, 48, 50,  1, 68, 53, 50, 59,  1, 61, 63, 60, 61, 50, 63, 57, 70,  1,\n",
-            "        47, 60, 54, 57, 50, 49,  1, 68, 54, 57, 57,  1, 51, 54, 57, 57,  1, 46,\n",
-            "         1, 52, 60, 60, 49,  8, 64, 54, 71, 50])\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'encode' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-493ccb74c43f>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_content\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'encode' is not defined"
           ]
         }
       ]
@@ -275,7 +260,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Spliting training and testing data."
+        "###**Spliting training and testing data.**\n",
+        "\n"
       ],
       "metadata": {
         "id": "BXPyEKZdQWSK"
@@ -297,7 +283,7 @@
         "collapsed": true,
         "outputId": "5aca8a54-6888-450a-975e-12a60b92b286"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,6 +353,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###**Hyperparameters**- Initialize the Batch size and Block size for .\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "FronuU0tDTKv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "torch.manual_seed(1337)\n",
@@ -380,8 +377,15 @@
       "metadata": {
         "id": "n3gpkgFtRK4e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ds5reLEgEAIe"
+      }
     },
     {
       "cell_type": "code",
@@ -400,7 +404,7 @@
       "metadata": {
         "id": "AsfqjN9mTkD-"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +427,7 @@
       "metadata": {
         "id": "qNB_lGFuAC8z"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +443,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Hyperparameters"
+        "###**Hyperparameters**"
       ],
       "metadata": {
         "id": "YF-jYZ7L-_7v"
@@ -457,7 +461,7 @@
       "metadata": {
         "id": "jUQXRW_wzcd-"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -497,7 +501,7 @@
       "metadata": {
         "id": "lLO8wBv9ToIB"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -528,7 +532,7 @@
       "metadata": {
         "id": "ZNhY4929ysZc"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -559,7 +563,7 @@
       "metadata": {
         "id": "C8vnoXOE1brD"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -592,7 +596,7 @@
       "metadata": {
         "id": "VAJZWqT_6HQt"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +664,7 @@
       "metadata": {
         "id": "ixfIs6ON6xIr"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -674,7 +678,7 @@
       "metadata": {
         "id": "mxmcmqY-_O5A"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +721,7 @@
         "id": "g-MrgOyw_Jet",
         "outputId": "4dfefc7b-b444-45e7-fa6e-890ec7b490fe"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
